added help symbol

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                    <div class="img-responsive pull-xs-left">
+                    	<img src="img/shield .png" alt="Heart Shield" class="priorityimg">
+                    </div>
                     <h4 class="visiontitlehealth">Health coverage ensures access to quality care and financial protection.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
@@ -123,6 +126,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
                             </div>
+                    <div class="img-responsive pull-xs-right">
+                    	<img src="img/atoms.png" alt="Atoms" class="priorityimg">
+                    </div>
                     <h4 class="visiontitlehealth">All Texans with mental illness or substance use disorders are able to access services and do so in the least restrictive setting for their needs.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
@@ -132,6 +138,21 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                    <div class="img-responsive pull-xs-left">
+                    	<img src="img/apple.png" alt="Apple" class="priorityimg">
+                    </div>
+                    <h4 class="visiontitlehealth">All Texans have year-round access to healthy food, and no Texan goes hungry.</h4>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Amend the Supplemental Nutrition Assistance Program (SNAP) work requirement policies to improve the program’s ability to serve vulnerable populations and protect families from loss of benefits.</li>
+                                    <li>Defeat efforts to restrict SNAP purchases.</li>
+                                </ul>
+  								</div>
+							</div>
+                    <div class="img-responsive pull-xs-right">
+                    	<img src="img/exclamation.png" alt="Exclamation Point" class="priorityimg">
+                    </div>
                     <h4 class="visiontitlehealth">Texans are able to access existing safety net programs when needed, and benefits are extended to Texans raising children of other family members.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
