--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h2 class="page-scroll" id="five">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
-                    <div class="img-responsive pull-xs-left">
-                    	<img src="img/heart.png" alt="Heart" class="priorityimg">
+                    <div>
+                    	<img src="img/heart.png" alt="Heart" class="priorityimg pull-left">
                     </div>
                     <h4 class="visiontitlehealth">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
@@ -102,8 +102,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                    <div class="img-responsive pull-xs-right">
-                    	<img src="img/firstaid.png" alt="First Aid Kit" class="priorityimg">
+                    <div>
+                    	<img src="img/firstaid.png" alt="First Aid Kit" class="priorityimg pull-right">
                     </div>
                     <h4 class="visiontitlehealth">All Texans are insured and remain insured.</h4>
                        		<div class="panel panel-default">	
@@ -115,7 +115,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                    <div class="img-responsive pull-xs-left">
+                    <div>
                     	<img src="img/shield .png" alt="Heart Shield" class="priorityimg">
                     </div>
                     <h4 class="visiontitlehealth">Health coverage ensures access to quality care and financial protection.</h4>
