--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     <h2 class="page-scroll" id="five">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
                     <div>
-                    	<img src="img/heart.png" alt="Heart" class="priorityimg pull-left">
+                    	<img src="img/heart.png" alt="Heart" class="priorityimg img-responsive pull-left">
                     </div>
                     <h4 class="visiontitlehealth">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
@@ -103,7 +103,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
   								</div>
 							</div>
                     <div>
-                    	<img src="img/firstaid.png" alt="First Aid Kit" class="priorityimg pull-right">
+                    	<img src="img/firstaid.png" alt="First Aid Kit" class="priorityimg img-responsive pull-right">
                     </div>
                     <h4 class="visiontitlehealth">All Texans are insured and remain insured.</h4>
                        		<div class="panel panel-default">	
@@ -116,7 +116,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
   								</div>
 							</div>
                     <div>
-                    	<img src="img/shield .png" alt="Heart Shield" class="priorityimg">
+                    	<img src="img/shield .png" alt="Heart Shield" class="priorityimg img-responsive pull-left">
                     </div>
                     <h4 class="visiontitlehealth">Health coverage ensures access to quality care and financial protection.</h4>
                        		<div class="panel panel-default">	
