pull left and right on other health and wellness images

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
                             </div>
-                    <div class="img-responsive pull-xs-right">
-                    	<img src="img/atoms.png" alt="Atoms" class="priorityimg">
+                    <div>
+                    	<img src="img/atoms.png" alt="Atoms" class="priorityimg img-responsive pull-right">
                     </div>
                     <h4 class="visiontitlehealth">All Texans with mental illness or substance use disorders are able to access services and do so in the least restrictive setting for their needs.</h4>
                        		<div class="panel panel-default">	
@@ -138,8 +138,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                    <div class="img-responsive pull-xs-left">
-                    	<img src="img/apple.png" alt="Apple" class="priorityimg">
+                    <div>
+                    	<img src="img/apple.png" alt="Apple" class="priorityimg img-responsive pull-left">
                     </div>
                     <h4 class="visiontitlehealth">All Texans have year-round access to healthy food, and no Texan goes hungry.</h4>
                        		<div class="panel panel-default">	
@@ -150,8 +150,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                    <div class="img-responsive pull-xs-right">
-                    	<img src="img/exclamation.png" alt="Exclamation Point" class="priorityimg">
+                    <div>
+                    	<img src="img/exclamation.png" alt="Exclamation Point" class="priorityimg img-responsive pull-right">
                     </div>
                     <h4 class="visiontitlehealth">Texans are able to access existing safety net programs when needed, and benefits are extended to Texans raising children of other family members.</h4>
                        		<div class="panel panel-default">	
