--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     <h2 class="page-scroll" id="six">Expand Economic Opportunity</h2>
                     
                     <div class="media-body media-middle">
+                    	<div>
+                    		<img src="img/books.png" alt="Books" class="priorityimg img-responsive pull-left">
+                    	</div>
                         <h4 class="visiontitleeconomic">Texas funds its public schools at a level adequate to meet the needs of all students.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
