--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                        <div>
+                    		<img src="img/moneyhouse.png" alt="Money house" class="priorityimg img-responsive pull-left">
+                    	</div>
                      	<h4 class="visiontitleeconomic">Academic achievement gaps between socio-economic and racial/ethnic groups are closed.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
