added rest of images

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
   								</div>
 							</div>
                         <div>
-                    		<img src="img/moneyhouse.png" alt="Money house" class="priorityimg img-responsive pull-left">
+                    		<img src="img/moneyhouse.png" alt="Money house" class="priorityimg img-responsive pull-right">
                     	</div>
                      	<h4 class="visiontitleeconomic">Academic achievement gaps between socio-economic and racial/ethnic groups are closed.</h4>
                        		<div class="panel panel-default">	
@@ -194,6 +194,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   							</div>
                             </div>
+                        <div>
+                    		<img src="img/gradcap.png" alt="Gradcap" class="priorityimg img-responsive pull-left">
+                    	</div>
                         <h4 class="visiontitleeconomic">Texas colleges become more affordable, and fewer students are dependent on loans.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
@@ -205,7 +208,22 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                        <h4 class="visiontitleeconomic">All Texas workers have access to quality jobs.</h4>
+                        <div>
+                    		<img src="img/briefcase.png" alt="Briefcase" class="priorityimg img-responsive pull-right">
+                    	</div>
+                        <h4 class="visiontitleeconomic">Texans have access to workforce training and educational career pathways that provide access to middle-class jobs.</h4>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Increase and improve the integration of higher education and workforce data.</li>
+                                    <li>Increase support for the Accelerate Texas program, which integrates basic reading, math, and writing skills with workforce training.</li>
+                                </ul>
+  								</div>
+							</div>
+                            <div>
+                    			<img src="img/upward.png" alt="Upward" class="priorityimg img-responsive pull-left">
+                    		</div>
+                            <h4 class="visiontitleeconomic">All Texas workers have access to quality jobs.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -219,6 +237,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h2 class="page-scroll" id="seven">Invest in Texas</h2>
                     <div class="media-body media-middle">
+                    	<div>
+                    		<img src="img/moneybag.png" alt="Moneybag" class="priorityimg img-responsive pull-left">
+                    	</div>
                         <h4 class="visiontitleinvest">State and local revenue systems are capable of fully funding necessary public services.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
