--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="col-xs-12 col-sm-4">
                  
                     <a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" class="logo img-responsive center-block" alt="CPPP Logo"></a>
-                    <p>CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds to reach their full potential. We dare Texas to be the best state for hard-working people and their families. If you have any questions about this data or something else in our work, please contact Oliver Bernstein at <a href="mailto:oliver@cppp.org">oliver@cppp.org.</a></p>
+                    <p>CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds to reach their full potential. We dare Texas to be the best state for hard-working people and their families. If you have any questions about this data or something else in our work, please contact Oliver Bernstein at <a href="mailto:bernstein@cppp.org">bernstein@cppp.org.</a></p>
                 </div>
                 
                 <div class="col-xs-12 col-sm-4" id="last">
@@ -311,7 +311,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         		    At the <a href="http://cppp.org" alt="CPPP Site">Center for Public Policy Priorities</a>, we believe in a Texas that offers everyone the chance to compete and succeed in life. We envision a Texas where everyone is healthy, well-educated, and financially secure. We want the best Texas - a proud state that sets the bar nationally by expanding opportunity for all. 
                     <br>
                     <br>
-                    CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds to reach their full potential. We dare Texas to be the best state for hard-working people and their families. If you have any questions about this data or something else in our work, please contact Oliver Bernstein at <a href="mailto:oliver@cppp.org">oliver@cppp.org.</a>
+                    CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds to reach their full potential. We dare Texas to be the best state for hard-working people and their families. If you have any questions about this data or something else in our work, please contact Oliver Bernstein at <a href="mailto:bernstein@cppp.org">bernstein@cppp.org.</a>
         		</p>
         		<br/>
         		<button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true"> OK </button>
