--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
-            	<div class="col-xs-12 col-sm-4">
+            	<div class="col-xs-12 col-sm-4 col-sm-offset-1">
                 	<a class="twitter-timeline" data-width="350" data-height="300" href="https://twitter.com/CPPP_TX/lists/cppp-staff">A Twitter List by CPPP_TX</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <div class="col-xs-12 col-sm-4">
