added spans around bullet points

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Protect Medicaid and CHIP from further damaging cuts.</li>
-                                    <li>Defeat bills that would reduce immigrant access to health care.</li>
-                                    <li>Increase funding and provider capacity for state family planning programs.</li>
-                                    <li>Support expanded scope of practice and access to non-physician medical and mental health professionals to make health care more affordable for Texans.</li>
+                                    <li><span>Protect Medicaid and CHIP from further damaging cuts.</span></li>
+                                    <li><span>Defeat bills that would reduce immigrant access to health care.</span></li>
+                                    <li><span>Increase funding and provider capacity for state family planning programs.</span></li>
+                                    <li><span>Support expanded scope of practice and access to non-physician medical and mental health professionals to make health care more affordable for Texans.</span></li>
                                 </ul>
   								</div>
 							</div>
@@ -109,9 +109,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Improve enrollment and renewal of Medicaid and CHIP for children and pregnant women.</li>
-                                    <li>Prevent loss of Medicaid 1115 waiver funding.</li>
-                                    <li>Pass a Texas solution to the Coverage Gap for working poor Texans.</li>
+                                    <li><span>Improve enrollment and renewal of Medicaid and CHIP for children and pregnant women.</span></li>
+                                    <li><span>Prevent loss of Medicaid 1115 waiver funding.</span></li>
+                                    <li><span>Pass a Texas solution to the Coverage Gap for working poor Texans.</span></li>
                                 </ul>
   								</div>
 							</div>
@@ -122,7 +122,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Increase protections against surprise medical bills.</li>
+                                    <li><span>Increase protections against surprise medical bills.</span></li>
                                 </ul>
   								</div>
                             </div>
@@ -133,8 +133,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Endorse expanded peer support services in correctional facilities and on re-entry to the community.</li>
-                                    <li>Ensure clear standards and enforcement of federal and state laws requiring “parity” between mental health and substance use benefits and coverage for other medical services.</li>
+                                    <li><span>Endorse expanded peer support services in correctional facilities and on re-entry to the community.</span></li>
+                                    <li><span>Ensure clear standards and enforcement of federal and state laws requiring “parity” between mental health and substance use benefits and coverage for other medical services.</span></li>
                                 </ul>
   								</div>
 							</div>
@@ -145,8 +145,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Amend the Supplemental Nutrition Assistance Program (SNAP) work requirement policies to improve the program’s ability to serve vulnerable populations and protect families from loss of benefits.</li>
-                                    <li>Defeat efforts to restrict SNAP purchases.</li>
+                                    <li><span>Amend the Supplemental Nutrition Assistance Program (SNAP) work requirement policies to improve the program’s ability to serve vulnerable populations and protect families from loss of benefits.</span></li>
+                                    <li><span>Defeat efforts to restrict SNAP purchases.</span></li>
                                 </ul>
   								</div>
 							</div>
@@ -157,8 +157,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Improve benefit program access and administration.</li>
-                                    <li>Amend Temporary Assistance for Needy Families (TANF) to provide meaningful cash assistance to kinship families.</li>
+                                    <li><span>Improve benefit program access and administration.</span></li>
+                                    <li><span>Amend Temporary Assistance for Needy Families (TANF) to provide meaningful cash assistance to kinship families.</span></li>
                                 </ul>
   								</div>
 							</div>
@@ -176,9 +176,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Advance changes to the school finance system to improve equity in funding for all students.</li>
-                                    <li>Defeat efforts to divert limited public funding to voucher programs.</li>
-                                    <li>Support a statewide study of the cost of providing a quality education.</li>
+                                    <li><span>Advance changes to the school finance system to improve equity in funding for all students.</span></li>
+                                    <li><span>Defeat efforts to divert limited public funding to voucher programs.</span></li>
+                                    <li><span>Support a statewide study of the cost of providing a quality education.</span></li>
                                 </ul>
   								</div>
 							</div>
@@ -189,8 +189,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Increase funding for the High-quality Prekindergarten Grants Program.</li>
-                                    <li>Advance policy solutions to address academic challenges faced by middle school students.</li>
+                                    <li><span>Increase funding for the High-quality Prekindergarten Grants Program.</span></li>
+                                    <li><span>Advance policy solutions to address academic challenges faced by middle school students.</span></li>
                                 </ul>
   							</div>
                             </div>
@@ -201,10 +201,10 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Increase the amount of state funds community colleges can earn for improved student outcomes.</li>
-                                    <li>Defeat efforts to reduce financial aid funding or remove tuition-funded financial aid programs.</li>
-                                    <li>Adopt a funding policy that incentivizes closing academic achievement gaps between socio-economic and racial/ethnic groups.</li>
-                                    <li>Defeat efforts to repeal the Texas Dream Act.</li>
+                                    <li><span>Increase the amount of state funds community colleges can earn for improved student outcomes.</span></li>
+                                    <li><span>Defeat efforts to reduce financial aid funding or remove tuition-funded financial aid programs.</span></li>
+                                    <li><span>Adopt a funding policy that incentivizes closing academic achievement gaps between socio-economic and racial/ethnic groups.</span></li>
+                                    <li><span>Defeat efforts to repeal the Texas Dream Act.</span></li>
                                 </ul>
   								</div>
 							</div>
@@ -215,8 +215,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Increase and improve the integration of higher education and workforce data.</li>
-                                    <li>Increase support for the Accelerate Texas program, which integrates basic reading, math, and writing skills with workforce training.</li>
+                                    <li><span>Increase and improve the integration of higher education and workforce data.</span></li>
+                                    <li><span>Increase support for the Accelerate Texas program, which integrates basic reading, math, and writing skills with workforce training.</span></li>
                                 </ul>
   								</div>
 							</div>
@@ -227,7 +227,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Expand access to retirement savings in the workplace.</li>
+                                    <li><span>Expand access to retirement savings in the workplace.</span></li>
                                 </ul>
   								</div>
 							</div>
@@ -244,11 +244,11 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
-                                    <li>Prevent harmful tax cuts or revenue diversions.</li>
-                                    <li>Reject a tighter state spending cap.</li>
-                                    <li>Use the Rainy Day Fund, if needed, to prevent major cuts to education and health care.</li>
-                                    <li>Block efforts to further restrict local governments’ ability to raise the revenue needed for public services.</li>
-                                    <li>Improve the appraisal process to ensure assessment of all property at full market value.</li>
+                                    <li><span>Prevent harmful tax cuts or revenue diversions.</span></li>
+                                    <li><span>Reject a tighter state spending cap.</span></li>
+                                    <li><span>Use the Rainy Day Fund, if needed, to prevent major cuts to education and health care.</span></li>
+                                    <li><span>Block efforts to further restrict local governments’ ability to raise the revenue needed for public services.</span></li>
+                                    <li><span>Improve the appraisal process to ensure assessment of all property at full market value.</span></li>
                                 </ul>
   								</div>
 							</div>
