--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     </div>
                     <h4 class="visiontitlehealth">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body healthbullet">
     							<ul>
                                     <li><span>Protect Medicaid and CHIP from further damaging cuts.</span></li>
                                     <li><span>Defeat bills that would reduce immigrant access to health care.</span></li>
@@ -107,7 +107,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     </div>
                     <h4 class="visiontitlehealth">All Texans are insured and remain insured.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body healthbullet">
     							<ul>
                                     <li><span>Improve enrollment and renewal of Medicaid and CHIP for children and pregnant women.</span></li>
                                     <li><span>Prevent loss of Medicaid 1115 waiver funding.</span></li>
@@ -120,7 +120,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     </div>
                     <h4 class="visiontitlehealth">Health coverage ensures access to quality care and financial protection.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body healthbullet">
     							<ul>
                                     <li><span>Increase protections against surprise medical bills.</span></li>
                                 </ul>
@@ -131,7 +131,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     </div>
                     <h4 class="visiontitlehealth">All Texans with mental illness or substance use disorders are able to access services and do so in the least restrictive setting for their needs.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body healthbullet">
     							<ul>
                                     <li><span>Endorse expanded peer support services in correctional facilities and on re-entry to the community.</span></li>
                                     <li><span>Ensure clear standards and enforcement of federal and state laws requiring “parity” between mental health and substance use benefits and coverage for other medical services.</span></li>
@@ -143,7 +143,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     </div>
                     <h4 class="visiontitlehealth">All Texans have year-round access to healthy food, and no Texan goes hungry.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body healthbullet">
     							<ul>
                                     <li><span>Amend the Supplemental Nutrition Assistance Program (SNAP) work requirement policies to improve the program’s ability to serve vulnerable populations and protect families from loss of benefits.</span></li>
                                     <li><span>Defeat efforts to restrict SNAP purchases.</span></li>
@@ -155,7 +155,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     </div>
                     <h4 class="visiontitlehealth">Texans are able to access existing safety net programs when needed, and benefits are extended to Texans raising children of other family members.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body healthbullet">
     							<ul>
                                     <li><span>Improve benefit program access and administration.</span></li>
                                     <li><span>Amend Temporary Assistance for Needy Families (TANF) to provide meaningful cash assistance to kinship families.</span></li>
@@ -174,7 +174,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     	</div>
                         <h4 class="visiontitleeconomic">Texas funds its public schools at a level adequate to meet the needs of all students.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body economicbullet">
     							<ul>
                                     <li><span>Advance changes to the school finance system to improve equity in funding for all students.</span></li>
                                     <li><span>Defeat efforts to divert limited public funding to voucher programs.</span></li>
@@ -187,7 +187,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     	</div>
                      	<h4 class="visiontitleeconomic">Academic achievement gaps between socio-economic and racial/ethnic groups are closed.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body economicbullet">
     							<ul>
                                     <li><span>Increase funding for the High-quality Prekindergarten Grants Program.</span></li>
                                     <li><span>Advance policy solutions to address academic challenges faced by middle school students.</span></li>
@@ -199,7 +199,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     	</div>
                         <h4 class="visiontitleeconomic">Texas colleges become more affordable, and fewer students are dependent on loans.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body economicbullet">
     							<ul>
                                     <li><span>Increase the amount of state funds community colleges can earn for improved student outcomes.</span></li>
                                     <li><span>Defeat efforts to reduce financial aid funding or remove tuition-funded financial aid programs.</span></li>
@@ -213,7 +213,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     	</div>
                         <h4 class="visiontitleeconomic">Texans have access to workforce training and educational career pathways that provide access to middle-class jobs.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body economicbullet">
     							<ul>
                                     <li><span>Increase and improve the integration of higher education and workforce data.</span></li>
                                     <li><span>Increase support for the Accelerate Texas program, which integrates basic reading, math, and writing skills with workforce training.</span></li>
@@ -225,7 +225,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     		</div>
                             <h4 class="visiontitleeconomic">All Texas workers have access to quality jobs.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body economicbullet">
     							<ul>
                                     <li><span>Expand access to retirement savings in the workplace.</span></li>
                                 </ul>
@@ -242,7 +242,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     	</div>
                         <h4 class="visiontitleinvest">State and local revenue systems are capable of fully funding necessary public services.</h4>
                        		<div class="panel panel-default">	
-  							<div class="panel-body">
+  							<div class="panel-body investbullet">
     							<ul>
                                     <li><span>Prevent harmful tax cuts or revenue diversions.</span></li>
                                     <li><span>Reject a tighter state spending cap.</span></li>
