added button to navbar

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                     <li>
                         <a class="page-scroll" href="#last">Contact</a>
                     </li>
+                    <li><a href="https://www.sagepayments.net/sagenonprofit/shopping_cart/forms/donate.asp?M_id=442765157351" class="pull-right" id="donate">Donate</a>
+                    </li>
                 </ul>
                 
             </div>
