--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
                     <li>
                         <a class="page-scroll" href="#last">Contact</a>
                     </li>
-                    <li><a href="https://www.sagepayments.net/sagenonprofit/shopping_cart/forms/donate.asp?M_id=442765157351" class="pull-right" id="donate">Donate</a>
+                </ul>
+                <ul class="pull-right nav navbar-nav">
+                	<li>
+                    	<a href="https://www.sagepayments.net/sagenonprofit/shopping_cart/forms/donate.asp?M_id=442765157351" id="donate">Donate</a>
                     </li>
                 </ul>
                 
