--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <a class="page-scroll" href="#last">Contact</a>
                     </li>
                 </ul>
-                <ul class="pull-right nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                 	<li>
                     	<a href="https://www.sagepayments.net/sagenonprofit/shopping_cart/forms/donate.asp?M_id=442765157351" id="donate">Donate</a>
                     </li>
