--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 </div>
             </div>
         </div>
+        <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="//www.youtube.com/watch?v=Jo0D8FH-qOQ&t=2s"></iframe>
+</div>
     </section>
     
     <section class="container-fluid">
