--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         <div class="container">
             <div class="row">
             <div class="col-sm-6">
-            	<div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item responsive-video" src="http://www.youtube.com/watch?v=Jo0D8FH-qOQ&t=2s"></iframe>
+            	<div class="responsive-video">
+    <iframe src="http://www.youtube.com/watch?v=Jo0D8FH-qOQ&t=2s"></iframe>
 </div>
             </div>
                 <div class="col-sm-6">
