--- a/index.html
+++ b/index.html
@@ -100,12 +100,10 @@
     <section class="bg-primary" id="one">
         <div class="container">
             <div class="row">
-            <div class="col-sm-6">
             	<div class="embed-responsive embed-responsive-16by9">
   <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=Jo0D8FH-qOQ"></iframe>
 </div>
-            </div>
-                <div class="col-sm-6">
+                <div class="col-xs-12">
                     <h2 class="margin-top-0 text-primary" id="four">Our Priorities</h2>
                     <br>
                     <p class="text-faded">
