--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="container">
             <div class="row">
             	<div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=Jo0D8FH-qOQ"></iframe>
+ <iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/Jo0D8FH-qOQ" frameborder="0" allowfullscreen></iframe>
 </div>
                 <div class="col-xs-12">
                     <h2 class="margin-top-0 text-primary" id="four">Our Priorities</h2>
