--- a/priorities/index.html
+++ b/priorities/index.html
@@ -51,14 +51,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#first">2017 Legislative Priorities</a>
+                <a class="navbar-brand page-scroll" href="#one">Home</a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
-                    
-                    <li>
-                        <a class="page-scroll" href="#four">Our Priorities</a>
-                    </li>
                     <li>
                         <a class="page-scroll" href="#five">Health and Wellness</a>
                     </li>
@@ -84,19 +80,6 @@
             </div>
         </div>
     </nav>
-    <header id="first">
-        <div class="header-content">
-            <div class="inner">
-            	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
-                <h1><strong>2017</strong> Legislative Priorities</h1>
-                <p id="updated"><i>Updated 10/18/2016</i></p>
-                <a href="http://forabettertexas.org/images/COM_2016_LegeStrategy.pdf" alt="PDF Version" class="pdfbutton">DOWNLOAD PDF VERSION</a>
-            </div>
-        </div>
-        <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.3s" poster="img/P1000145000.jpg" id="video-background">
-            <source src="img/legevideo.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.</source>
-        </video>
-    </header>
     <section class="bg-primary" id="one">
         <div class="container" >
         <h2 class="margin-top-0 text-primary" id="four">Our Priorities</h2>
