--- a/priorities/index.html
+++ b/priorities/index.html
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#one">Home</a>
+                <a class="navbar-brand page-scroll" href="/">Home</a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
