changed copyright to 2017

--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
         <div class="header-content">
             <div class="inner">
             	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
-                <h1><strong>2017</strong> Legislative Priorities</h1>
-                <p id="updated"><i>Updated 10/18/2016</i></p>
-                <a href="http://forabettertexas.org/images/COM_2016_LegeStrategy.pdf" alt="PDF Version" class="pdfbutton">DOWNLOAD PDF VERSION</a>
+                <h1><strong>2017</strong> Legislative Session</h1>
+                
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.3s" poster="img/P1000145000.jpg" id="video-background">
@@ -318,7 +317,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 </div>
             </div>
             <br/>
-            <span class="pull-right text-muted small"><a href="http://www.cppp.org">Center for Public Policy Priorities</a> ©2016</span>
+            <span class="pull-right text-muted small"><a href="http://www.cppp.org">Center for Public Policy Priorities</a> ©2017</span>
         </div>
     </footer>
     <div id="galleryModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
