updated front page nabber

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <ul class="nav navbar-nav">
                     
                     <li>
-                        <a class="page-scroll" href="#four">Our Priorities</a>
+                        <a class="page-scroll" href="/txlegepriorities/priorities">Our Priorities</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#five">Health and Wellness</a>
@@ -88,8 +88,8 @@
         <div class="header-content">
             <div class="inner">
             	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
-                <h1><strong>2017</strong> Legislative Session</h1>
-                
+                <h1>Our Work</h1>
+                <p>Updated 1/3/2016</p>
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.3s" poster="img/P1000145000.jpg" id="video-background">
