changed from "priorities" to "session" on front page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CPPP 2017 Legislative Priorities</title>
+    <title>2017 Legislative Session</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#first">2017 Legislative Priorities</a>
+                <a class="navbar-brand page-scroll" href="#first">2017 Legislative Session</a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
@@ -88,7 +88,7 @@
         <div class="header-content">
             <div class="inner">
             	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
-                <h1>Our Work</h1>
+                <h1>2017 Legislative Session</h1>
                 <p>Updated 1/3/2016</p>
             </div>
         </div>
