--- a/priorities/index.html
+++ b/priorities/index.html
@@ -83,6 +83,9 @@
     <section class="bg-primary" id="one">
         <div class="container" >
         <h2 class="margin-top-0 text-primary" id="four">Our Priorities</h2>
+        <div>
+        	<a class="pdfbutton" href="http://forabettertexas.org/images/COM_2016_LegeStrategy.pdf">Download PDF Version</a>
+        </div>
             <div class="row">
             	<div class="embed-responsive embed-responsive-16by9">
  <iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/Jo0D8FH-qOQ" frameborder="0" allowfullscreen></iframe>
