--- a/priorities/index.html
+++ b/priorities/index.html
@@ -98,7 +98,7 @@
 Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families. We envision a Texas where everyone is healthy, well-educated, and financially secure. We want the best Texas – a proud state that sets the bar nationally by expanding opportunity for all.</p>
 <br>
 <br>
-					<div>
+					<div class="text-center">
         	<a class="pdfbutton" href="http://forabettertexas.org/images/COM_2016_LegeStrategy.pdf">Download PDF Version</a>
         </div>
                 </div>
