--- a/index.html
+++ b/index.html
@@ -120,87 +120,53 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
                 <div class="media wow fadeInRight">
-                    <h2 class="page-scroll" id="five">Ensure Health and Wellness</h2>
+                    <h2 class="page-scroll" id="five">Health and Wellness</h2>
                     <div class="media-body media-middle">
                     <div>
                     	<img src="img/heart.png" alt="Heart" class="priorityimg img-responsive pull-left">
                     </div>
-                    <h4 class="visiontitlehealth">All Texans have meaningful access to affordable health care.</h4>
+                    <h4 class="visiontitlehealth">Health and Wellness Blog</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body healthbullet">
     							<ul>
-                                    <li><span>Protect Medicaid and CHIP from further damaging cuts.</span></li>
-                                    <li><span>Defeat bills that would reduce immigrant access to health care.</span></li>
-                                    <li><span>Increase funding and provider capacity for state family planning programs.</span></li>
-                                    <li><span>Support expanded scope of practice and access to non-physician medical and mental health professionals to make health care more affordable for Texans.</span></li>
+                                    <li><span>Post</span></li>
+                                    <li><span>Post</span></li>
+                                    <li><span>Post</span></li>
+                                    <li><span>Post</span></li>
                                 </ul>
+                                <a href="http://forabettertexas.org/healthandwellness.html">More</a>
   								</div>
 							</div>
                     <div>
                     	<img src="img/firstaid.png" alt="First Aid Kit" class="priorityimg img-responsive pull-right">
                     </div>
-                    <h4 class="visiontitlehealth">All Texans are insured and remain insured.</h4>
+                    <h4 class="visiontitlehealth">Health and Wellness Work</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body healthbullet">
     							<ul>
-                                    <li><span>Improve enrollment and renewal of Medicaid and CHIP for children and pregnant women.</span></li>
-                                    <li><span>Prevent loss of Medicaid 1115 waiver funding.</span></li>
-                                    <li><span>Pass a Texas solution to the Coverage Gap for working poor Texans.</span></li>
+                                    <li><span>Post</span></li>
+                                    <li><span>Post</span></li>
                                 </ul>
+                                <a href="http://forabettertexas.org/healthandwellness.html">More</a>
   								</div>
 							</div>
                     <div>
                     	<img src="img/shield .png" alt="Heart Shield" class="priorityimg img-responsive pull-left">
                     </div>
-                    <h4 class="visiontitlehealth">Health coverage ensures access to quality care and financial protection.</h4>
+                    <h4 class="visiontitlehealth">Health and Wellness Testimony</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body healthbullet">
     							<ul>
-                                    <li><span>Increase protections against surprise medical bills.</span></li>
+                                    <li><span>Post</span></li>
+                                    <li><span>Post</span></li>
                                 </ul>
   								</div>
                             </div>
-                    <div>
-                    	<img src="img/atoms.png" alt="Atoms" class="priorityimg img-responsive pull-right">
-                    </div>
-                    <h4 class="visiontitlehealth">All Texans with mental illness or substance use disorders are able to access services and do so in the least restrictive setting for their needs.</h4>
-                       		<div class="panel panel-default">	
-  							<div class="panel-body healthbullet">
-    							<ul>
-                                    <li><span>Endorse expanded peer support services in correctional facilities and on re-entry to the community.</span></li>
-                                    <li><span>Ensure clear standards and enforcement of federal and state laws requiring “parity” between mental health and substance use benefits and coverage for other medical services.</span></li>
-                                </ul>
-  								</div>
-							</div>
-                    <div>
-                    	<img src="img/apple.png" alt="Apple" class="priorityimg img-responsive pull-left">
-                    </div>
-                    <h4 class="visiontitlehealth">All Texans have year-round access to healthy food, and no Texan goes hungry.</h4>
-                       		<div class="panel panel-default">	
-  							<div class="panel-body healthbullet">
-    							<ul>
-                                    <li><span>Amend the Supplemental Nutrition Assistance Program (SNAP) work requirement policies to improve the program’s ability to serve vulnerable populations and protect families from loss of benefits.</span></li>
-                                    <li><span>Defeat efforts to restrict SNAP purchases.</span></li>
-                                </ul>
-  								</div>
-							</div>
-                    <div>
-                    	<img src="img/exclamation.png" alt="Exclamation Point" class="priorityimg img-responsive pull-right">
-                    </div>
-                    <h4 class="visiontitlehealth">Texans are able to access existing safety net programs when needed, and benefits are extended to Texans raising children of other family members.</h4>
-                       		<div class="panel panel-default">	
-  							<div class="panel-body healthbullet">
-    							<ul>
-                                    <li><span>Improve benefit program access and administration.</span></li>
-                                    <li><span>Amend Temporary Assistance for Needy Families (TANF) to provide meaningful cash assistance to kinship families.</span></li>
-                                </ul>
-  								</div>
-							</div>
-                    </div>
+                    
                 </div>
                 <hr>
                 <div class="media wow fadeIn">
-                    <h2 class="page-scroll" id="six">Expand Economic Opportunity</h2>
+                    <h2 class="page-scroll" id="six">Economic Opportunity</h2>
                     
                     <div class="media-body media-middle">
                     	<div>
