--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                            <div>
+                    		<img src="img/piggybank.png" alt="Piggy Bank" class="priorityimg img-responsive pull-right">
+                    		</div>
                             <h4 class="visiontitleinvest">Invest in Texas Blog</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body investbullet">
@@ -232,6 +235,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                            <div>
+                    		<img src="img/piggybank.png" alt="Piggy Bank" class="priorityimg img-responsive pull-left">
+                    		</div>
                             <h4 class="visiontitleinvest">Invest in Texas Testimony</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body investbullet">
@@ -241,7 +247,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                           
+                           <div>
+                    		<img src="img/moneystack-01.png" alt="Money Stack" class="priorityimg img-responsive pull-left">
+                    		</div>
                             </div>
                     </div>
                    
