added/changed "more" links

--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                     <li><span>Post</span></li>
                                     <li><span>Post</span></li>
                                     <li><span>Post</span></li>
-                                    <li><span>Post</span></li>
                                 </ul>
                                 <a href="http://forabettertexas.org/healthandwellness.html">More</a>
   								</div>
@@ -180,6 +179,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                     <li><span>Post</span></li>
                                     <li><span>Post</span></li>
                                 </ul>
+                                <a href="http://forabettertexas.org/economicopportunity.html">More</a>
   								</div>
 							</div>
                         <div>
@@ -191,6 +191,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
     							<ul>
                                     <li><span>Post</span></li>
                                 </ul>
+                                <a href="http://forabettertexas.org/economicopportunity.html">More</a>
   							</div>
                             </div>
                         <div>
@@ -202,6 +203,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
     							<ul>
                                     <li><span>Post</span></li>
                                 </ul>
+                                <a href="http://forabettertexas.org/economicopportunity.html">More</a>
   								</div>
 							</div>
                         
@@ -221,6 +223,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                     <li><span>Post</span></li>
                                     <li><span>Post</span></li>
                                 </ul>
+                                <a href="http://forabettertexas.org/investintexas.html">More</a>
   								</div>
 							</div>
                             <div>
@@ -233,6 +236,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                     <li><span>Post</span></li>
                                     <li><span>Post</span></li>
                                 </ul>
+                                <a href="http://forabettertexas.org/investintexas.html">More</a>
   								</div>
 							</div>
                             <div>
@@ -245,6 +249,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                     <li><span>Post</span></li>
                                     <li><span>Post</span></li>
                                 </ul>
+                                <a href="http://forabettertexas.org/investintexas.html">More</a>
   								</div>
 							</div>
                            <div>
