--- a/index.html
+++ b/index.html
@@ -100,12 +100,23 @@
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
                 <div class="media wow fadeInRight">
-                    <h2 class="page-scroll" id="five">Health and Wellness</h2>
+                	<div id="accordion" role="tablist" aria-multiselectable="true">
+  						<div class="card">
+    						<div class="card-header" role="tab" id="headingOne">
+                    			<h2 class="mb-0" id="five">
+                                	<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    				Health and Wellness
+                                    </a>
+                                </h2>
+                             </div>
+                        </div>
+                        <div id="collapseOne" class="collapse in" role="tabpanel" aria-labelledby="headingOne">
+      				<div class="card-block">
                     <div class="media-body media-middle">
                     <div>
                     	<img src="img/heart.png" alt="Heart" class="priorityimg img-responsive pull-left">
                     </div>
-                    <h4 class="visiontitlehealth">Health and Wellness Blog</h4>
+                    <h4 class="visiontitlehealth">Health and Wellness Work</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body healthbullet">
     							<ul>
@@ -116,6 +127,9 @@
                                 <a href="http://forabettertexas.org/healthandwellness.html">More</a>
   								</div>
 							</div>
+                           </div>
+                         </div>
+                       </div>
                     <div>
                     	<img src="img/firstaid.png" alt="First Aid Kit" class="priorityimg img-responsive pull-right">
                     </div>
