--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                     <li><span><a href="http://forabettertexas.org/images/IT_2016_02_Primer_FranchiseTax.pdf">Fact Sheet: The Franchise Tax: An important component of state revenue</a></span></li>
                                     <li><span><a href="http://forabettertexas.org/images/IT_2016_02_Primer_Homestead.pdf">Fact Sheet: The Flat-Dollar Homestead Exemption: A better way to help Texas homeowners</a></span></li>
                                 </ul>
-                                <p class="more"><a href="http://forabettertexas.org/economicopportunitywork.html">More</a></p>
+                                <p class="more"><a href="http://forabettertexas.org/investintexaswork.html">More</a></p>
   								</div>
 							</div>
                             </div>
