pulled all images to the right

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <h2 class="page-scroll" id="five">Health and Wellness</h2>
                     <div class="media-body media-middle">
                     <div>
-                    	<img src="img/heart.png" alt="Heart" class="priorityimg img-responsive pull-left">
+                    	<img src="img/heart.png" alt="Heart" class="priorityimg img-responsive pull-right">
                     </div>
                     <h4 class="visiontitlehealth">Health and Wellness Work</h4>
                        		<div class="panel panel-default">	
@@ -126,7 +126,7 @@
                     
                     <div class="media-body media-middle">
                     	<div>
-                    		<img src="img/books.png" alt="Books" class="priorityimg img-responsive pull-left">
+                    		<img src="img/books.png" alt="Books" class="priorityimg img-responsive pull-right">
                     	</div>
                         <h4 class="visiontitleeconomic">Economic Opportunity Work</h4>
                        		<div class="panel panel-default">	
@@ -148,7 +148,7 @@
                     <h2 class="page-scroll" id="seven">Invest in Texas</h2>
                     <div class="media-body media-middle">
                     	<div>
-                    		<img src="img/moneybag.png" alt="Moneybag" class="priorityimg img-responsive pull-left">
+                    		<img src="img/moneybag.png" alt="Moneybag" class="priorityimg img-responsive pull-right">
                     	</div>
                         <h4 class="visiontitleinvest">Invest in Texas Work</h4>
                        		<div class="panel panel-default">	
