--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#first">2017 Legislative Session</a>
+                <a class="navbar-brand page-scroll" href="#first">Top</a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
@@ -70,9 +70,6 @@
                     </li>
                     <li>
                         <a class="page-scroll" data-toggle="modal" title="Center for Public Policy Priorities" href="#aboutModal">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#last">Contact</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
