Point of order button

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
         </video>
     </header>
     <section class="container-fluid">
+    <div class="text-center">
+    <h2>Sign up for Point of Order</h2>
+    	<p>Want to stay informed about big stories and developments at the Texas Capitol? Each week Point of Order will interject with key actions by lawmakers, share policy recommendations guided by data, and fact-check debates.</p>
+        <a href="http://bit.ly/2l8vczR" alt="Point of Order signup" id="poosignup">Sign up for Point of Order</a>
+    </div>
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="media wow fadeInRight">
                     <h2 class="page-scroll" id="five">Health and Wellness</h2>
