--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section class="container-fluid">
     <div class="text-center" id="poosection">
     <h2>Sign up for Point of Order</h2>
-    <a href="http://bit.ly/2l8vczR" alt="Point of Order signup"<img src="img/16715979_1334618086596914_187130320969658284_o.png" alt="Point of Order Picture" id="poopic"></a>
+    <a href="http://bit.ly/2l8vczR" alt="Point of Order signup"><img src="img/16715979_1334618086596914_187130320969658284_o.png" alt="Point of Order Picture" id="poopic"></a>
     	<p>Want to stay informed about big stories and developments at the Texas Capitol? Each week Point of Order will interject with key actions by lawmakers, share policy recommendations guided by data, and fact-check debates.</p>
         <a href="http://bit.ly/2l8vczR" alt="Point of Order signup" id="poosignup">Sign up for Point of Order</a>
     </div>
