changed point of order buttons

--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@
     <div class="text-center" id="poosection">
     <a href="http://bit.ly/2l8vczR" alt="Point of Order signup"><img src="img/16715979_1334618086596914_187130320969658284_o.png" alt="Point of Order Picture" id="poopic"></a>
     	<p>Want to stay informed about big stories, developments, and ways to get engaged at the Texas Capitol? Each week we'll interject with key actions by lawmakers, share policy recommendations guided by data, and fact-check debates.</p>
+        <div>
         <a href="http://bit.ly/2l8vczR" alt="Point of Order signup" class="poosignup">Sign up for Point of Order</a>
+        </div>
+        <div>
         <a href="http://forabettertexas.org/pointoforder.html" alt="Point of Order previous" class="poosignup">View Point of Order Archive</a>
+        </div>
     </div>
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="media wow fadeInRight">
