--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -85,8 +85,7 @@
         <div class="header-content">
             <div class="inner">
             	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
-                <h1>2017 Legislative Session</h1>
-                <p>Updated 4/4/2017</p>
+                <h1>Wrap Up of the 85th Legislature</h1>
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.3s" poster="img/P1000145000.jpg" id="video-background">
@@ -94,12 +93,30 @@
         </video>
     </header>
     <section class="container-fluid">
-    <div class="text-center" id="poosection">
-    <a href="http://bit.ly/2l8vczR" alt="Point of Order signup"><img src="img/16715979_1334618086596914_187130320969658284_o.png" alt="Point of Order Picture" id="poopic"></a>
-    	<p>Want to stay informed about big stories, developments, and ways to get engaged at the Texas Capitol? Each week we'll interject with key actions by lawmakers, share policy recommendations guided by data, and fact-check debates. Already signed up? You can <a href="http://forabettertexas.org/pointoforder.html">check out the Point of Order archive here</a>.</p>
-        <div>
-        <a href="http://bit.ly/2l8vczR" alt="Point of Order signup" class="poosignup">Sign up for Point of Order</a>
-        </div>
+    <div class="text-center" id="coversection">
+    
+    	<p><strong>The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory.</strong> Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
+<br>
+<br>
+Lawmakers spent precious time and energy on discriminatory responses to manufactured problems, instead of focusing on the real challenges facing our state. They missed countless opportunities to adopt policies that would have made Texas healthier, better educated and more financially secure. While a few sensible policies managed to make it through, overall the session pitted Texans against their neighbors while failing to invest in a strong future for hard-working people and their families.
+<br><br>
+One of the most spectacular tragedies of the session was the failure to enact school finance reform. The 5.3 million students in Texas public schools deserve a quality education, regardless of where they live or what their background. The House worked hard and crafted a reasonable plan, but zealots in the Senate poisoned it with school vouchers and woefully inadequate funding. The promise of expanded pre-K led only to a mandate that will force schools to use existing funding to pay for pre-K, resulting in a net loss for districts.
+<br><br>
+Another casualty of the session was Texas’ long-held reputation for sensible immigration policies. Immigrants and their families, without whom the Texas economy and culture would collapse, became the targets of fear-mongering and bias. Despite hours of testimony against the bill from law enforcement, local officials, educators, and faith leaders, the Legislature passed a “show me your papers” law that requires local law enforcement to comply with all federal immigration detainer requests, and bars local police — including campus police — from refusing to cooperate with federal immigration authorities. LGBTQ Texans were the victims of other priorities driven by fear rather than facts, including the so-called bathroom bill.
+<br><br>
+Touting a “tight budget” mostly created by the Legislature’s own short-sighted tax cuts and revenue diversions last session, the state continued its record of underinvesting in health care, education and other critical services. Despite the growing population and changing needs of our state, the Legislature inexplicably left billions of dollars sitting in the Rainy Day Fund – a foolish policy choice that threatens our future prosperity. And despite the revenue shortfall, lawmakers continued to push for more tax cuts, which so far have failed to pass. The harm to Texans from state cuts to critical services is likely to be exacerbated by looming federal threats to health care, food and education programs.
+<br><br>
+At the same time the Senate was refusing to pay the state’s fair share of public school funding – the real way to control property taxes – it was pushing hard to limit the ability of local governments to raise the revenue they need. That was one of many state efforts to usurp local control from Texas cities – the engines of our economy.
+<br><br>
+Though the scheme to cut revenue from local governments and the “bathroom bill” failed to pass during the regular session, Gov. Abbott added these and more bad ideas to the call for a special session.
+<br><br>
+There were some silver linings, and CPPP’s data and advocacy helped lawmakers get good policies across the finish line. Mental health in Texas got a big boost when both houses passed bills that make coverage more accessible and equal, and bolstered programs that help people living with mental illness get the treatment they need and stay out of jail. Texans who receive surprise medical bills after visits to emergency rooms will now have better protections, and grandparents and other kinship caregivers will receive some additional financial support to help children stay with family.
+<br><br>
+In addition to the good bills that passed, CPPP helped block or reduce the harm from several terrible bills – including efforts to subsidize private school tuition through vouchers, eliminate the state’s main business tax, restrict the ability of cities and counties to raise revenue, and remove a key source of financial aid for 87,000 Texas students.
+<br><br>
+We express our deep gratitude to the many lawmakers, legislative staff, partners and supporters who persisted in the face of daunting odds to fight for hard-working Texans and their families. As lawmakers take a brief break before the special session, CPPP will continue to analyze what passed and what didn’t, explain the implications for Texas, and build momentum for policies that enable Texans of all backgrounds to reach their full potential.
+</p>
+        
     </div>
     <br>
     <br>
